# WebGAL_k

./: .gitignore  README.md  README_EN.md  README_FR.md  README_JP.md  README_KO.md  bun.lockb  hexz_k  package.json  release-to-server.sh  release-to-terre.sh  releasenote.md
.github/workflows/: main.yml  mobile.yml
dev-docs/: 动画与变换系统设计.md  演出调用说明.md  语句解析示例.md
dev-docs/ko/: 퍼포먼스 호출 지침.md
src-tauri/: ._target  ._tauri.conf.json  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json  fs.json  process.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: hexz.rs  lib.rs
