[package]
name = "app"
version = "0.1.2"
description = "webgal-k"
authors = ["maincore_tech.", "k43Lab"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-fs = "2.5.1"
hexz_k = { path = "../hexz_k" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.4.1"
