[package]
name = "app"
version = "0.1.4"
description = "webgal-k"
authors = ["maincore_tech.", "k43Lab"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-fs = "2.5.1"
hexz-core = "0.8"
hexz-store = "0.8"
bincode = "1"
anyhow = "1"
mime_guess = "2.0.5"
http = "1.4.2"
urlencoding = "2.1.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
